<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_parties"
        android:icon="@drawable/ic_cocktail"
        android:title="@string/title_parties" />

    <item
        android:id="@+id/navigation_groups"
        android:icon="@drawable/ic_bubble_chart_black_24dp"
        android:title="@string/title_groups" />

    <!--<item-->
    <!--android:id="@+id/navigation_profile"-->
    <!--android:icon="@drawable/ic_person_black_24dp"-->
    <!--android:title="@string/title_profile" />-->

    <item
        android:id="@+id/navigation_friends"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/title_friends" />

    <item
        android:id="@+id/navigation_logout"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/title_logout" />

</menu>
