<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".party.EditProductActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/nameEdit"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:ems="10"
            android:hint="@string/product_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/priceEdit"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:ems="10"
            android:hint="@string/product_price"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginTop="10dp"
            android:onClick="editProduct"
            android:text="@string/product_edit" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>